tools/fleet/fixtures/packets/invalid/worker-branch-command.case
source=valid-work.packet
mutation=add Worker-Command containing git branch
expected=invalid
